--- a/jojo.htm
+++ b/jojo.htm
@@ -62,6 +62,9 @@ window.onload = start(0);
 <body >
 <h1> <img src="html5.png" > Jojo</h1>
 <p> Animation of <a href="http://en.wikipedia.org/wiki/M%C3%B6bius_strip"> möbius strip</a> using 2d transform</p>
+<div class="Animate">
+<p > Jojo animation</p>
+</div>
 
 
 <div id="mdcontent" style="display:block;">
@@ -83,8 +86,11 @@ window.onload = start(0);
 
 
 <div style="display:block;float:left;position:fixed;bottom:0;right:0;"> 
+  <div class="pobof">
+
  <a href="http://invoicer.biz"><img src="intro-invoicer.png"></a>
  <footer><cite>DarekM@emadar.com</cite> </footer>
+ </div>
 
 </div>
 
